# planets

./: Readme.md  azure-pipelines.yml
files/logo/: logo.xcf
files/models/ao/: ao.blend  ao.blend1
files/models/ao2/: ao2.blend  ao2.blend1
planets/: .gitignore  Cargo.toml  savegame.json
planets/assets/gltf/ao/: ao.gltf
planets/assets/gltf/ao2/: ao2.gltf
planets/assets/gltf/cube/: untitled.gltf
planets/assets/gltf/plane/: plane.gltf
planets/assets/gltf/sphere/: sphere.gltf
planets/assets/starship/: starship.gltf
planets/shaders/: background.frag  basic.frag  basic.vert  camera.glsl  compile.bat  compile.sh  gameoflife.frag  gameoflife.vert  gbuffer.frag  gbuffer.vert  lights.glsl  rtCommon.glsl  rtao.chit.glsl  rtao.miss.glsl  rtao.raygen.glsl  rtao.rchit  rtao.rgen  rtao.rmiss  scenemodels.frag  scenemodels.vert  timer.glsl
planets/src/: app.rs  gameloop.rs  main.rs  sun.rs
planets/src/engine/: camera.rs  framegraph.rs  gameloop.rs  geometry.rs  lights.rs  material.rs  mod.rs  models.rs  renderer.rs  renderpass.rs  resourcebinding.rs  textures.rs  timer.rs  viewport.rs  window.rs
planets/src/engine/model/: geometry.rs  memory.rs  mod.rs
planets/src/engine/passes/: background.rs  gbuffer.rs  mod.rs  rtao.rs
planets/src/engine/scene/: builder.rs  drawlist.rs  graph.rs  mod.rs  node.rs
planets/src/passes/: background.rs  gameoflife.rs  geometry.rs  mod.rs  scenemodels.rs
planets/src/system/: serialize.rs
planets/src/util/: constants.rs  fs.rs  helpers.rs  input.rs  log.rs  math.rs  mod.rs  platforms.rs
planets/src/vulkan/: array_ssbo.rs  cmd_buffers.rs  debug.rs  device.rs  drawable.rs  entry.rs  extensions.rs  fence.rs  framebuffer.rs  image.rs  instance.rs  mem.rs  mod.rs  pipeline.rs  renderpass.rs  resource.rs  resources.rs  sampler.rs  semaphore.rs  shader.rs  swapchain.rs  uniform_buffer.rs
planets/src/vulkan/image/: image.rs  sampler.rs
planets/src/vulkan/img/: image.rs  mod.rs
planets/src/vulkan/resources/: manager.rs  mod.rs  objects.rs
planets/src/vulkan/rt/: as.rs  mod.rs  pipeline.rs
planets/src/world/: gameoflife.rs  loader.rs  mod.rs  planet.rs  planetblock.rs  sun.rs  time.rs  world.rs
