[package]
name = "planets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"              # log macros
simplelog = "0.10.0"        # logging logic and appenders (console, file, ...)
log-panics = "2.0.0"        # forward RUst panic!() output to log
chrono = "0.4.19"           # Real world time library
winit = "0.24.0"            # OS window abstraction
serde = { version = "1.0.130", features = ["derive"] }          # framework for serializing and deserializing Rust data structures
serde_json = "1.0"          # json for serde