[package]
name = "planets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"              # log macros
simplelog = "0.12.0"        # logging logic and appenders (console, file, ...)
log-panics = "2.1.0"        # forward RUst panic!() output to log
chrono = "0.4.23"           # Real world time library
winit = "0.28.3"            # OS window abstraction
raw-window-handle = "0.5.0" # Raw window handles
serde = { version = "1.0.152", features = ["derive"] }          # framework for serializing and deserializing Rust data structures
serde_json = "1.0"          # json for serde
ash = "0.37.1"              # Vulkan bindings for Rust
ash-window = "0.12.0"       # Crossplatform window
cgmath = "0.18"             # Computer graphics math library
image = "0.24.5"            # Image loading and saving library
num = "0.4.0"               # Additional numeric operaionts like clamp, etc.
bitflags = "2.0.2"          # Bitflags macros

[dependencies.gltf]
version = "1.0.0"
features = ["utils"]

# Windows specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.24.0"
cocoa = "0.24.1"
objc  = "0.2.7"
